# HH-Codec

./: .gitignore  README.md  README_zh.md  eval.py  pyproject.toml  requirements.txt  setup.py  train.py
config/: train.yaml  train_with_8gpu.yaml
dataset/: README.md  eval_prepare.py  hubert_mel.py
hhcodec/: dataloader.py  lr_scheduler.py  model.py  util.py  vq.py
hhcodec/data/: speech.py  speech_24k.py  speechtokenizer.py  speechtokenizer_24k.py  utils.py
hhcodec/discriminator/: dac.py  mpmr.py
hhcodec/losses/: speech_loss.py  stft_simvq_mel.py
hhcodec/metric/: utmos.py
hhcodec/neuralmodel/: conv.py  seanet.py  vocosbackbone.py
