[project]
name = "hhcodec"
version = "0.1.0"
description = "HH-Codec Python package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "bigvgan",
    "swanlab",
    "vector_quantize_pytorch",
    "timm",
    "torchaudio",
    "transformers",
    "jsonargparse[signatures]>=4.40.2",
    "lightning>=2.5.3",
]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hhcodec*"]

[tool.uv]
dev-dependencies = ["black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
